--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "eshop",
+  "name": "realestate",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -29,7 +28,7 @@
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.8.10",
+    "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "uuid": "^3.4.0"
